tests/fixtures/invalid/pow_list_int_str.py
# Cannot call pow() with List[int], Int, Str
x = pow([1, 2, 3], 1, "hello")
